--- a/views/home.jade
+++ b/views/home.jade
@@ -16,3 +16,14 @@
     <% include partials/js-includes.ejs %>
     </body>
 </html>
+
+html
+  body
+    br
+    br
+    br
+    .container
+      .row
+        .col-md-12
+          h1=headline
+          img.img-responsive(src='/images/cities.jpg', alt='I love all cities')
