--- a/views/partials/menu.jade
+++ b/views/partials/menu.jade
@@ -1,20 +1,18 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-     <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-       </button>
-       <a href="/" class="navbar-brand">I love my city!</a>
-    </div>
-    <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="/lofoten">Lofoten</a></li>
-          <li><a href="/kirkenes">Kirkenes</a></li>
-          <li><a href="/tromso">Tromsø</a></li>
-          <li><a href="/bergen">Bergen</a></li>
-        </ul>
-    </div>
-  </div>
-</div>
+.navbar.navbar-inverse.navbar-fixed-top
+  .container
+    .navbar-header
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='/') I love my city!
+    .navbar-collapse.collapse
+      ul.nav.navbar-nav
+        li
+          a(href='/lofoten') Lofoten
+        li
+          a(href='/kirkenes') Kirkenes
+        li
+          a(href='/tromso') Tromsø
+        li
+          a(href='/bergen') Bergen
