--- a/views/city.jade
+++ b/views/city.jade
@@ -1,23 +1,17 @@
-<html>
-    <% include partials/head.ejs %>
-    <body>
-        <% include partials/menu.ejs %>
-        <br /><br /><br />
-        <div class="container">
-            <div class="row">
-                <h1><%=headline%></h1>
-                <br />
-                <% for(var i = 1; i <= num_of_img; i++) { %>
-
-
-                  <div class="col-md-6">
-                    <div class="thumbnail">
-                        <img src="/images/<%=city%>/<%=city%>-<%=i%>.jpg"/>
-                    </div>
-                </div>
-                <%}%>
-            </div>
-        </div>
-        <% include partials/js-includes.ejs %>
-    </body>
-</html>
+html
+   head
+    include partials/head.jade
+   body
+    include partials/menu.jade
+    br
+    br
+    br
+    include partials/headline.jade
+    br
+    .container
+      .row
+        - for (var i = 1; i <= num_of_img; i++)
+              .col-md-6
+               .thumbnail
+                 img(src='/images/'+city+'/'+city+'-'+i+'.jpg')
+    include partials/js-includes.jade
