--- a/views/home.jade
+++ b/views/home.jade
@@ -1,29 +1,15 @@
-<html>
-    <% include partials/head.ejs %>
-    
-    <body>
-     <% include partials/menu.ejs %>
-     <br /><br /><br />
-     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1><%=headline%></h1>
-                <img src="/images/cities.jpg" class="img-responsive" alt="I love all cities"/>
-            </div>
-        </div>
-     </div>
-
-    <% include partials/js-includes.ejs %>
-    </body>
-</html>
-
 html
-  body
-    br
-    br
-    br
-    .container
-      .row
-        .col-md-12
-          h1=headline
-          img.img-responsive(src='/images/cities.jpg', alt='I love all cities')
+    head
+        include partials/head.jade
+    body
+        include partials/menu.jade
+        br
+        br
+        br
+        include partials/headline.jade
+        br
+        .container
+            .row
+                .col-md-12
+                    img.img-responsive(src='/images/cities.jpg', alt='I love all cities')
+        include partials/js-includes.jade
