--- a/views/partials/js-includes.jade
+++ b/views/partials/js-includes.jade
@@ -1,2 +1,2 @@
-<script src="/js/jquery-1.11.3.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+script(src='/js/jquery-1.11.3.js')
+script(src='/js/bootstrap.min.js')
